e2e/topology-matrix/external-xds.yaml
dataDir: /var/lib/esgw
deliver:
  mode: xds
  xds:
    listen: 127.0.0.1:18000
    adminAddress: 127.0.0.1:9901
proc:
  enabled: false
api:
  listen: 0.0.0.0:8080
  topology: sidecar
state:
  readyInterval: 1s
  statsInterval: 1s
  clustersInterval: 1s
  configInterval: 1s
  certsInterval: 30s
