e2e/topology-matrix/gateway-invalid.yaml
apiVersion: esgw/v1alpha1
kind: Listener
metadata:
  name: ingress
spec:
  address: 0.0.0.0
  port: 70000
  protocol: HTTP
