e2e/topology-matrix/managed-static.yaml
dataDir: /var/lib/esgw
deliver:
  mode: static
  xds:
    adminAddress: unix:///var/lib/esgw/run/managed-static-admin.sock
  static:
    outputPath: /var/lib/esgw/envoy/envoy.yaml
proc:
  enabled: true
  envoyPath: /usr/local/bin/envoy
  baseID: 26072602
  liveTimeout: 15s
  drainTime: 2s
  parentShutdownTime: 2m
api:
  listen: 0.0.0.0:8080
  topology: standalone
state:
  readyInterval: 1s
  statsInterval: 1s
  clustersInterval: 1s
  configInterval: 1s
  certsInterval: 30s
